feat(transactions): add support for transactions
