# internal/http/controller/transactions.go
@@ -1,0 +1,117 @@
+package controller
+
+import (
+	"budget-tracker-api-v2/internal/http/middleware"
+	"budget-tracker-api-v2/internal/model"
+	"budget-tracker-api-v2/internal/repository"
+	"budget-tracker-api-v2/internal/repository/mongodb"
+	"encoding/json"
+	"net/http"
+	"strings"
+
+	"github.com/gorilla/mux"
+	log "github.com/sirupsen/logrus"
+	"go.opentelemetry.io/otel/codes"
+	"go.opentelemetry.io/otel/trace"
+)
+
+// TransactionsController injects CardRepository to controllers
+type TransactionsController struct {
+	Tracer trace.Tracer
+	Repo   repository.TransactionCollectionInterface
+}
+
+type TransactionErrorMessage struct {
+	Message    string `json:"message"`
+	Details    string `json:"details"`
+	StatusCode int32  `json:"status_code,omitempty"`
+}
+
+type TransactionCreatedMessage struct {
+	Message     string            `json:"message"`
+	ID          string            `json:"id"`
+	OwnerID     string            `json:"owner_id"`
+	StatusCode  int32             `json:"status_code"`
+	Transaction model.Transaction `json:"transaction"`
+}
+
+// RegisterRoutes register router for handling Card operations
+func (uc *TransactionsController) RegisterRoutes(r *mux.Router) {
+	p := r.PathPrefix("/api/v1/transactions").Subrouter()
+	p.Use(middleware.RequireTokenAuthentication)
+
+	p.HandleFunc("", uc.CreateTransaction).Methods("POST")
+}
+
+func (tc *TransactionsController) CreateTransaction(w http.ResponseWriter, r *http.Request) {
+	var transaction *model.Transaction
+
+	ctx, span := tc.Tracer.Start(r.Context(), "TransactionsController.CreateTransaction")
+	defer span.End()
+
+	err := json.NewDecoder(r.Body).Decode(&transaction)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		_, err := w.Write([]byte(`{"message": "could not create transaction", "details": "` + err.Error() + `"}`))
+		if err != nil {
+			log.Error("Could not write response: ", err)
+		}
+
+		return
+	}
+
+	t, err := mongodb.NewTransactionRepository(ctx, tc.Tracer, tc.Repo)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		_, err := w.Write([]byte(`{"message": "could not create transaction", "details": "` + err.Error() + `"}`))
+		if err != nil {
+			log.Error("Could not write response: ", err)
+		}
+
+		return
+	}
+
+	transaction, err = t.Insert(ctx, transaction)
+	if err != nil {
+
+		span.RecordError(err)
+		span.SetStatus(codes.Error, err.Error())
+
+		if strings.Contains(err.Error(), "already registered") {
+			w.WriteHeader(http.StatusConflict)
+			msg := TransactionErrorMessage{
+				Message:    "could not create transaction",
+				Details:    err.Error(),
+				StatusCode: http.StatusConflict,
+			}
+			if err := json.NewEncoder(w).Encode(msg); err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+				return
+			}
+
+			return
+		}
+
+		w.WriteHeader(http.StatusInternalServerError)
+		_, err := w.Write([]byte(`{"message": "could not create transaction", "details": "` + err.Error() + `"}`))
+		if err != nil {
+			log.Error("Could not write response: ", err)
+		}
+
+		return
+	}
+
+	w.WriteHeader(http.StatusCreated)
+	sMsg := TransactionCreatedMessage{
+		Message:     "transaction created",
+		ID:          transaction.ID.Hex(),
+		OwnerID:     transaction.OwnerID.Hex(),
+		StatusCode:  http.StatusCreated,
+		Transaction: *transaction,
+	}
+	if err := json.NewEncoder(w).Encode(sMsg); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+}
